--- a/public/app/views/footer.view.html
+++ b/public/app/views/footer.view.html
@@ -1,3 +1,5 @@
-<footer>
+<div class= "footer">
+  <footer>
     <p class="credits">&copy;2015 Hairven. <a href="http://themes.alessioatzeni.com/html/Hairven/" title="Hairven | Responsive One Page Template">Hairven Design</a> by <a href="http://www.alessioatzeni.com/" title="Alessio Atzeni | Web Designer &amp; Front-end Developer">Susan Adelokiki</a></p>
   </footer>
+</div>
